[project]
name = "composer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "content-core[docling]>=0.5.0",
    "pip>=25.0.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]
[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling", "pip"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion"]

[tool.setuptools]
package-dir = {"fusion" = "src/fusion"}

[dependency-groups]
dev = [
    "ipykernel>=4.0.1",
    "ipywidgets>=4.0.0",
    "pyperclip>=1.9.0",
    "pytest>=7.2.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"